--- a/stravaClient/css/app.css
+++ b/stravaClient/css/app.css
@@ -4,3 +4,12 @@ body {
     height: 100%;
 }
 
+table,th,td
+{
+    border:1px solid black;
+    border-collapse:collapse;
+}
+th,td
+{
+    padding:5px;
+}
