--- a/stravaClient/css/app.css
+++ b/stravaClient/css/app.css
@@ -13,3 +13,48 @@ th,td
 {
     padding:5px;
 }
+
+#RideSummary {
+    position: absolute;
+    top: 0px;
+    width: 1800px;
+    height: 55px;
+    /*display: none;*/
+    background-color: #f2f2f2;
+}
+
+.summaryTable {
+    border: 0px solid black;
+    border-collapse:collapse;
+    width:800px;
+}
+
+.summaryTable td {
+    border: 0px solid black;
+    border-collapse:collapse;
+}
+
+.summaryDataRow {
+    font-weight: bold;
+    font-size:150%;
+}
+
+.summaryDataRow td {
+    padding-top:4px;
+    padding-right:10px;
+    padding-bottom:4px;
+    padding-left:10px;
+}
+
+.summaryLabels {
+    font-size:80%;
+    color: #a0a0a0;
+}
+
+.summaryLabels td {
+    padding-top:4px;
+    padding-right:10px;
+    padding-bottom:0px;
+    padding-left:10px;
+}
+
