segment effort rows. need to independently fetch detailed segment data (beyond what is returned in a segment effort).

--- a/stravaClient/css/app.css
+++ b/stravaClient/css/app.css
@@ -15,8 +15,8 @@ th,td
 }
 
 #RideSummary {
-    position: absolute;
-    top: 0px;
+    /*position: absolute;*/
+    /*top: 32px;*/
     width: 1800px;
     height: 55px;
     /*display: none;*/
