--- a/stravaClient/css/app.css
+++ b/stravaClient/css/app.css
@@ -2,7 +2,11 @@ body {
     /*width: 1400px;*/
     /*height: 1000px;*/
     height: 100%;
+    margin:0;
+    padding:0;
 }
+
+#mapBoxMap { position:absolute; top:0; bottom:0; width:100%; }
 
 table,th,td
 {
