--- a/stravaClient/css/app.css
+++ b/stravaClient/css/app.css
@@ -103,3 +103,21 @@ th,td
 .clearBoth {
     clear: left;
 }
+
+.generateSegmentRow {
+    margin-top: 32px;
+    margin-bottom: 16px;
+}
+
+.segmentNameLabel {
+    margin-right: 8px;
+}
+
+.segmentNameText {
+    width: 256px;
+}
+
+.generateSegmentButton {
+    font-size: 14px;
+    margin-left: 8px;
+}
