--- a/stravaClient/css/app.css
+++ b/stravaClient/css/app.css
@@ -117,6 +117,11 @@ th,td
     width: 256px;
 }
 
+.distanceText {
+    width: 32px;
+}
+
+
 .generateSegmentButton {
     font-size: 14px;
     margin-left: 8px;
